fixed a bug, the screen was not wrapping input digit as it grew larger

--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,12 @@ button {
 /* || Calculator */
 
 main {
-  height: 100vh;
+  min-height: 100vh;
   background-color: #e5e5e5;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 50px 0;
 }
 
 .calculator {
@@ -42,21 +43,23 @@ main {
   border-radius: 24px;
   overflow: hidden;
   box-shadow: 6px 6px 23px -5px #000, -1px -1px 16px -6px #000;
+  width: 276px;
 }
 
 .screen {
-  height: 200px;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   text-align: right;
-  padding: 10px;
-  gap: 15px;
+  gap: 12px;
+  padding: 25px 19px 15px 15px;
+  word-break: break-all; /*if the text exceedes width of content it breaks based on indivdual character, not word*/
 }
 
 .input {
   color: var(--COLOR-LIGHT-GREY);
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 .output {
@@ -69,7 +72,6 @@ main {
   display: flex;
   flex-wrap: wrap;
   gap: 4px;
-  width: 276px;
 }
 
 .keys {
